<resources>
    <string name="app_name">CV Genius</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-4196466051386479~2501989655</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-4196466051386479/6761617101</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_create_your_cv_more_professional">Create Your CV \n More Professional</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">" Close Drawer"</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_cv_templates">CV Templates</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_create_job_professional_cv_in_minutes">Create Job-professional CV in minutes!</string>
    <string name="lbl_choose_templates">Choose Templates</string>
    <string name="lbl_create_my_cv">Create My CV</string>
    <string name="lbl_select_your_profile_photo">Select your profile photo</string>
    <string name="lbl_upload_photo">Upload Photo</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_share_app">Share App</string>
    <string name="lbl_view_my_cv">View My CV</string>
    <string name="lbl_personal_details">Personal Details</string>
    <string name="lbl_education_details">Education Details</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_nationality">Nationality</string>
    <string name="lbl_contact">Contact</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_professional_title">Professional Title</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_degree_diploma_name">Degree/Diploma Name</string>
    <string name="highest_level_of_education">Highest Level of Education</string>
    <string name="lbl_project_details">Project Details</string>
    <string name="lbl_credential_url">Credential URL</string>
    <string name="lbl_school_college_university_name">School /College /University Name</string>
    <string name="lbl_field_is_mandatory">Field is mandatory</string>
    <string name="lbl_project_title">Project Title</string>
    <string name="lbl_position">Position</string>
    <string name="lbl_work_experience">Work Experience</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_skills">Skills</string>
    <string name="lbl_achievements">Achievements</string>
    <string name="lbl_objective">Objective</string>
    <string name="lbl_signature">Signature</string>
    <string name="lbl_edit_my_cv">Edit My CV</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_change_template">Change Template</string>
    <string name="lbl_education">Educations</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_duplicate">Duplicate</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_references">Reference</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_website">Website</string>
</resources>