<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.splash.SplashActivity"
    android:orientation="vertical"
    android:background="@drawable/splash_background_list"
    android:layout_weight="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/ivSplash"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:src="@drawable/splash_image"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_card_medium_n"
        android:text="@string/lbl_create_your_cv_more_professional"
        android:textColor="@color/colorToolbar"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tvAppNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_heading_2x"
        android:textStyle="bold"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_bottom_get_started"
            android:gravity="center"
            android:background="@drawable/background_get_started_button"
            android:padding="@dimen/margin_medium_2"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

    </RelativeLayout>

</LinearLayout>