<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.splash.IntroActivity"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_weight="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/ivSplash"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:src="@drawable/splash_image"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_card_medium_n"
        android:text="@string/lbl_create_your_cv_more_professional"
        android:textColor="@color/colorToolbar"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tvAppNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading_2x"
        android:textStyle="bold"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:padding="@dimen/margin_medium_2"-->
<!--            android:text="@string/lbl_get_started"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/colorSecondaryText"-->
<!--            android:textSize="@dimen/text_medium"-->
<!--            android:textStyle="bold"/>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_bottom_get_started"
            android:padding="@dimen/margin_medium_2"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>