<?xml version="1.0" encoding="utf-8"?>
<com.smtz.cvgenius.presentation.details.SkillAchievementViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/margin_medium_3"
    android:layout_marginEnd="@dimen/margin_medium_3"
    android:layout_marginBottom="@dimen/margin_medium_3"
    app:cardCornerRadius="@dimen/margin_card_medium"
    app:cardElevation="10dp">

    <RelativeLayout
        android:id="@+id/containerCollapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCardView">

        <TextView
            android:id="@+id/tvDetailNameCollapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_large"
            android:paddingTop="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_large"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="@dimen/margin_medium_3"
            android:layout_height="@dimen/margin_medium_3"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_large"
            android:src="@drawable/ic_bin" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/containerExpanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvDetailNameExpanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_medium_2"
            android:background="@color/colorCardView"
            android:paddingTop="@dimen/margin_large"
            android:paddingBottom="@dimen/margin_large"
            android:singleLine="true"
            android:text="@string/lbl_project_details"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <!-- Title  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_small"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium_2">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="Title"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:gravity="top|start"
                android:padding="@dimen/margin_medium"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="10"
                android:textColorHint="@color/colorProfileText"
                android:textColor="@color/colorSecondaryText"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_small"
                android:text="@string/lbl_field_is_mandatory"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/text_small"
                android:visibility="invisible"/>

        </LinearLayout>

        <soup.neumorphism.NeumorphButton
            style="@style/Widget.Neumorph.Button"
            app:neumorph_shapeType="flat"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearanceTextButton"
            app:neumorph_backgroundColor="@color/colorAccent"
            app:neumorph_shadowColorLight="#FFFDF4"
            app:neumorph_insetTop="8dp"
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_medium_2"
            android:text="@string/lbl_save"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondaryText"/>

    </LinearLayout>

</com.smtz.cvgenius.presentation.details.SkillAchievementViewPod>
