<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".presentation.details.personalDetails.PersonalDetailActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorAccent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/lbl_personal_details"
            app:titleTextColor="@color/colorToolbar"
            app:titleCentered="true"/>

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/width_back_btn"
            android:layout_height="@dimen/height_back_btn"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:background="@drawable/background_back"
            android:elevation="1dp"
            android:padding="@dimen/margin_card_medium"
            android:src="@drawable/ic_back" />

    </FrameLayout>

    <soup.neumorphism.NeumorphCardView
        style="@style/Widget.Neumorph.CardView"
        app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
        app:neumorph_backgroundColor="@color/colorPrimary"
        app:neumorph_shapeType="pressed"
        app:neumorph_insetTop="0dp"
        app:neumorph_insetBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-10.8dp"
        android:layout_marginEnd="-10.3dp"
        android:paddingTop="@dimen/margin_large"
        android:paddingStart="@dimen/margin_xlarge"
        android:paddingEnd="@dimen/margin_xlarge"
        android:paddingBottom="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_medium_n">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <!-- First Name, Last Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_card_medium"
                        android:text="@string/lbl_first_name"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_regular" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:hint="Mary"
                        android:inputType="text"
                        android:padding="@dimen/margin_medium"
                        android:singleLine="true"
                        android:textColor="@color/colorSecondaryText"
                        android:textColorHint="@color/colorProfileText"
                        android:textCursorDrawable="@drawable/custom_cursor"
                        android:nextFocusDown="@id/etLastName"
                        android:textSize="@dimen/text_regular" />

                    <TextView
                        android:id="@+id/errorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/lbl_field_is_mandatory"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/text_small"
                        android:visibility="invisible"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_card_medium"
                        android:text="@string/lbl_last_name"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_regular" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:hint="Janes"
                        android:inputType="text"
                        android:padding="@dimen/margin_medium"
                        android:singleLine="true"
                        android:textColor="@color/colorSecondaryText"
                        android:textColorHint="@color/colorProfileText"
                        android:textCursorDrawable="@drawable/custom_cursor"
                        android:textSize="@dimen/text_regular"
                        android:nextFocusDown="@id/etContact" />

                </LinearLayout>


            </LinearLayout>

            <!-- Date of Birth, Nationality -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_n"
                android:orientation="horizontal">

                <!-- Contact -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_card_medium"
                        android:text="@string/lbl_contact"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_regular" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:digits="01234567890.+"
                        android:hint="+95 9791234567"
                        android:inputType="number"
                        android:padding="@dimen/margin_medium"
                        android:singleLine="true"
                        android:textColor="@color/colorSecondaryText"
                        android:textColorHint="@color/colorProfileText"
                        android:textCursorDrawable="@drawable/custom_cursor"
                        android:textSize="@dimen/text_regular"
                        android:nextFocusDown="@id/etNationality" />

                    <TextView
                        android:id="@+id/errorContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_small"
                        android:text="@string/lbl_field_is_mandatory"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/text_small"
                        android:visibility="invisible"/>

                </LinearLayout>

                <!-- Nationality -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_card_medium"
                        android:text="@string/lbl_nationality"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_regular" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:hint="American"
                        android:inputType="text"
                        android:padding="@dimen/margin_medium"
                        android:singleLine="true"
                        android:textColor="@color/colorSecondaryText"
                        android:textColorHint="@color/colorProfileText"
                        android:textCursorDrawable="@drawable/custom_cursor"
                        android:textSize="@dimen/text_regular" />

                </LinearLayout>

            </LinearLayout>

            <!-- Website, Contact-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_n"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="horizontal">

                <!-- Website -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_card_medium"
                        android:text="@string/lbl_website"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_regular" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:digits="01234567890.+"
                        android:hint="github.com/***"
                        android:inputType="number"
                        android:padding="@dimen/margin_medium"
                        android:singleLine="true"
                        android:textColor="@color/colorSecondaryText"
                        android:textColorHint="@color/colorProfileText"
                        android:textCursorDrawable="@drawable/custom_cursor"
                        android:textSize="@dimen/text_regular"
                        android:nextFocusDown="@id/etNationality" />

                </LinearLayout>

                <!-- DOB -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_card_medium"
                        android:text="@string/lbl_date_of_birth"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_regular" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:digits="01234567890.+"
                        android:hint="1.11.2011"
                        android:inputType="number"
                        android:padding="@dimen/margin_medium"
                        android:singleLine="true"
                        android:textColorHint="@color/colorProfileText"
                        android:textCursorDrawable="@drawable/custom_cursor"
                        android:textSize="@dimen/text_regular" />

                </LinearLayout>

            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_card_medium"
                    android:text="@string/lbl_email"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_regular" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edit_text"
                    android:hint="maryjanes1500@gmail.com"
                    android:inputType="text"
                    android:padding="@dimen/margin_medium"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorProfileText"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="@dimen/text_regular" />

            </LinearLayout>

            <!-- Address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_card_medium"
                    android:text="@string/lbl_address"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_regular" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edit_text"
                    android:gravity="top|start"
                    android:hint="United States"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="10"
                    android:padding="@dimen/margin_medium"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorProfileText"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="@dimen/text_regular" />

            </LinearLayout>

            <!-- Professional Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_card_medium"
                    android:text="@string/lbl_professional_title"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_regular" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProfessionalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edit_text"
                    android:hint="UI/UX Designer"
                    android:inputType="text"
                    android:padding="@dimen/margin_medium"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorProfileText"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="@dimen/text_regular" />

            </LinearLayout>

            <soup.neumorphism.NeumorphButton
                style="@style/Widget.Neumorph.Button"
                app:neumorph_shapeType="flat"
                app:neumorph_shapeAppearance="@style/CustomShapeAppearanceTextButton"
                app:neumorph_backgroundColor="@color/colorAccent"
                app:neumorph_shadowColorLight="#FFFDF4"
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_save"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondaryText"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    </soup.neumorphism.NeumorphCardView>

</LinearLayout>